update: SYSTEM_PROMPT